# mcp_server_filesystem

./: .gitignore  PROJECT_STRUCTURE.md  README.md  README_asirulnik.md  apply_all_fixes.sh  mcp_server_filesystem.txt  mcp_server_filesystem_setup_summary.md  pyproject.toml  requirements.txt  run_setup.sh  setup_mcp_filesystem.sh
.github/workflows/: ci.yml
build.000/lib/: server.py
src/: file_tools.py  main.py  models.py  server.py
src/file_tools/: __init__.py  directory_utils.py  edit_file.py  file_operations.py  path_utils.py
tests/: LLM_Test.md  README.md  __init__.py  test_edit_file_api.py  test_file_tools.py  test_server.py
tests/file_tools/: test_edit_file.py  test_file_operations.py
tests/test_file_tools/: indentation_test.py
tests/testdata/tests/testdata/test_file_tools/: test_api_file.txt
tools/: black.bat  format_all.bat  iSort.bat
